--- a/WebsiteRoboticUMN/event.html
+++ b/WebsiteRoboticUMN/event.html
@@ -20,7 +20,7 @@
         <img src="image/ukm_logo.png" alt="UMN Robotic Club Logo" class="logo left">
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="event.html" class="active">Event</a></li>
                 <li><a href="studies.html">Studies</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
