--- a/WebsiteRoboticUMN/studies.html
+++ b/WebsiteRoboticUMN/studies.html
@@ -181,7 +181,7 @@
         <img src="image/ukm_logo.png" alt="Left Logo" class="logo left">
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="event.html">Event</a></li>
                 <li><a href="studies.html">Studies</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
