--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             </div>
         </div>
     </div>
+    <footer class="text-center bg-dark text-white py-3">
+    <p>UMN.Robotic.Club<br>Club Association Of UMN Robotic<br></p>
+    <p>&copy; 2024 | This site has copyright.</p>
+</footer>
     <script src="scripts.js"></script>
 </body>
 </html>
