--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                     <span class="hover-text"><p>UKM Robotic atau yang lebih dikenal dengan UMN Robotic Club (URC) merupakan sebuah unit kegiatan mahasiswa yang berfokus terhadap pengembangan otomasi, internet of things (IOT), dan artificial intelligent (AI) menjadi sebuah produk yang dapat memberikan kontribusi kepada masyarakat dalam mengatasi permasalahan yang ada. UMN Robotic Club berada dalam naungan prodi teknik elektro. Namun, anggota UMN Robotic Club terdiri dari berbagai macam prodi, seperti : Teknik informatika, teknik komputer, desain komunikasi visual, dan masih banyak lagi. Bukan hanya belajar mengenai robotika, dalam UKM Robotic dapat mengakomodasi pertukaran pengetahuan dari bermacam prodi.
                    Untuk saat ini, UMN Robotic Club sedang berfokus untuk mengikuti kompetisi robotik nasional (KRI) kategori hexapod. Hexapod sendiri merupakan sebuah robot berkaki enam yang dapat bergerak sendiri mengikuti input sensor. Bukan hanya itu, kedepan akan banyak perlombaan di bidang robotika yang akan diikuti oleh para anggota UMN Robotic Club. Karena di UKM Robotic, kita tidak hanya belajar namun juga berkompetisi dengan universitas lagi.</p><p>...   </p></span>
                 </div>
+                <div class="popup-image">
+            <img src="image/robot.png" alt="Robot Image">
+                </div>
             </div>
             <div class="rectangle dark-grey">
                     <p>Join UMN Robotic Club!</p>
