--- a/index.html
+++ b/index.html
@@ -41,10 +41,20 @@
             <div class="rectangle dark-grey">
                     <p>About UMN Robotic Club</p>
                 </a>
-                <div class="light-grey">
-                    <span class="hover-text"><p>UKM Robotic atau yang lebih dikenal dengan UMN Robotic Club (URC) merupakan sebuah unit kegiatan mahasiswa yang berfokus terhadap pengembangan otomasi, internet of things (IOT), dan artificial intelligent (AI) menjadi sebuah produk yang dapat memberikan kontribusi kepada masyarakat dalam mengatasi permasalahan yang ada. UMN Robotic Club berada dalam naungan prodi teknik elektro. Namun, anggota UMN Robotic Club terdiri dari berbagai macam prodi, seperti : Teknik informatika, teknik komputer, desain komunikasi visual, dan masih banyak lagi. Bukan hanya belajar mengenai robotika, dalam UKM Robotic dapat mengakomodasi pertukaran pengetahuan dari bermacam prodi.
-                   Untuk saat ini, UMN Robotic Club sedang berfokus untuk mengikuti kompetisi robotik nasional (KRI) kategori hexapod. Hexapod sendiri merupakan sebuah robot berkaki enam yang dapat bergerak sendiri mengikuti input sensor. Bukan hanya itu, kedepan akan banyak perlombaan di bidang robotika yang akan diikuti oleh para anggota UMN Robotic Club. Karena di UKM Robotic, kita tidak hanya belajar namun juga berkompetisi dengan universitas lagi.</p><p>...   </p></span>
-                </div>
+                <div class="popup-overlay">
+    <div class="popup-box">
+        <span class="close-btn">&times;</span>
+        <div class="popup-content">
+            <h2>About Ultrasonic Sensor</h2>
+            <p>
+                An ultrasonic sensor is a device that measures distance by emitting ultrasonic sound waves and detecting the time it takes for the sound waves to reflect back from an object. 
+                It is widely used in robotics, automation, and obstacle detection systems. 
+                Ultrasonic sensors can measure distances up to several meters with high accuracy. 
+                They are particularly useful in environments where other distance sensors, such as infrared, may struggle due to lighting conditions. 
+                Applications include robotics navigation, vehicle parking systems, and industrial automation processes. 
+                Additionally, ultrasonic sensors are known for their reliability and ability to work in dusty or dark environments without interference.
+            </p>
+        </div>
                 <div class="popup-image">
             <img src="image/robot.png" alt="Robot Image">
                 </div>
