--- a/schedule.html
+++ b/schedule.html
@@ -51,6 +51,10 @@
                     <li>Details: No meeting in this semester</li>
             </div>
         </div>
+        <footer class="text-center bg-dark text-white py-3">
+    <p>UMN.Robotic.Club<br>Club Association Of UMN Robotic<br></p>
+    <p>&copy; 2024 | This site has copyright.</p>
+</footer>
     </main>
     <script src="scripts.js"></script>
 </body>
