--- a/event.html
+++ b/event.html
@@ -46,6 +46,10 @@
                 <p>--</p>
             </div>
         </div>
+        <footer class="text-center bg-dark text-white py-3">
+    <p>UMN.Robotic.Club<br>Club Association Of UMN Robotic<br></p>
+    <p>&copy; 2024 | This site has copyright.</p>
+</footer>
     </main>
     <script src="scripts.js"></script>
 </body>
