--- a/studies.html
+++ b/studies.html
@@ -256,5 +256,9 @@
             overlay.classList.remove('active');
         }
     </script>
+    <footer class="text-center bg-dark text-white py-3">
+    <p>UMN.Robotic.Club<br>Club Association Of UMN Robotic<br></p>
+    <p>&copy; 2024 | This site has copyright.</p>
+</footer>
 </body>
 </html>
