--- a/studies.html
+++ b/studies.html
@@ -92,6 +92,7 @@
             position: relative;
             overflow: hidden;
             cursor: pointer;
+            gap: 10px
             border-radius: 10px;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             width: 150px;
