--- a/event.html
+++ b/event.html
@@ -7,13 +7,247 @@
             margin: 0;
             padding: 0;
             background-size: cover;
+            height: 100%;
+            background-repeat: no-repeat;
             background-image: url("image/event_bg.png");
+            color: aqua;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #33333397;
+            padding: 10px 20px;
+            color: aqua;
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+        .logo { 
+            width: 45px; 
+        } 
+
+        .logo.left{
+            height: 80px;
+            width: 160px;
+        }
+
+        .logo.right{
+            height: 80px;
+        }
+
+        .logo.left, .logo.right { 
+            align-self: flex-start; 
+        } 
+
+        nav { 
+            display: flex; 
+            align-items: left; 
+            flex: 1; 
+        } 
+
+        nav ul { 
+            display: flex; 
+            list-style: none; 
+            margin: 0; 
+            padding: 0; 
+        } 
+
+        nav ul li { 
+            margin-right: 10px; 
+            margin-top: -10px;
+            margin-left: 15px;
+        } 
+
+        nav ul li a { 
+            color: aqua; 
+            text-decoration: none;
+        }
+
+        .social-icons {
+            display: flex;
+        }
+
+        .social-icons a {
+            margin-left: 10px;
+            margin-top: -10px;
+        }
+
+        .social-icons img {
+            width: 24px;
+            height: 24px;
+        }
+
+        .content {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: calc(100vh - 60px); /* Adjust according to header height */
+        }
+
+        .left-square, .right-square {
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 20px;
+            margin: 20px;
+        }
+
+        .left-square {
+            width: 200px;
+            height: 300px;
+        }
+
+        .right-square {
+            width: 400px;
+            height: 300px;
+            border-radius: 15px;
+        }
+
+        /* Container to position the elements side by side */
+        .side-by-side {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px; /* Adjust the gap as needed */
+        }
+
+        .rectangle {
+            position: relative;
+            width: 400px;
+            height: 200px;
+            background-color: rgba(30, 30, 30, 0.6);
+            border: 3px solid aqua;
+            border-radius: 10px;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            cursor: pointer;
+            overflow: hidden;
+        }
+
+        .rectangle:hover {
+            width: 1000px;
+            height: 500px;
+            background-color: rgba(30, 30, 30, 0.8);
+        }
+
+        .rectangle p {
+            margin: 0;
+            font-size: 18px;
+            color: aqua;
+            z-index: 1;
+        }
+
+        .rectangle .hover-text {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: aqua;
+            opacity: 0;
+            visibility: hidden;
+            text-align: center;
+            padding: 10px;
+            transition: opacity 0.3s ease, visibility 0.3s ease;
+            z-index: 2;
+            font-size: 15px;
+        }
+
+        .rectangle:hover .hover-text {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .square {
+            position: relative;
+            width: 150px;
+            height: 150px;
+            background-color: white;
+            border: 1px solid #ccc;
+            overflow: hidden;
+            transition: width 0.3s ease, height 0.3s ease;
+            cursor: pointer;
+        }
+
+        .square img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .square .hover-text {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: rgba(0, 0, 0, 0.5);
+            color: white;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .square:hover {
+            width: 200px;
+            height: 200px;
+        }
+
+        .square:hover .hover-text {
+            opacity: 1;
+        }
+
+        .popup {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 80%;
+            background-color: white;
+            border: 1px solid #ccc;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .popup-content {
+            padding: 20px;
+            position: relative;
+        }
+
+        .popup .close {
+            position: absolute;
+            top: 10px;
+            right: 20px;
+            font-size: 24px;
+            cursor: pointer;
+        }
+
+        .trapezoid-link {
+            display: block;
+            text-decoration: none;
+            color: white; /* Sesuaikan dengan warna tema */
+            text-align: center;
+            font-weight: bold;
+            padding: 10px;
+        }
+
+        .trapezoid-link:hover {
+            background-color: rgba(255, 255, 255, 0.2); /* Efek hover */
+            transition: background-color 0.3s;
         }
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esports Event</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -38,19 +272,19 @@
     </header>
     <main>
         <div class="content">
-            <div class="left-circle">
+            <div class="left-square">
                 <h2>No Upcoming Events</h2>
+                <label for="sort">Sort by:</label>
+                <select id="sort" name="sort">
+                    <option value="date">Date</option>
+                    <option value="name">Name</option>
+                </select>
             </div>
             <div class="right-square">
                 <h2>Event Highlights</h2>
                 <p>--</p>
             </div>
         </div>
-        <footer class="text-center bg-dark text-white py-3">
-    <p>UMN.Robotic.Club<br>Club Association Of UMN Robotic<br></p>
-    <p>&copy; 2024 | This site has copyright.</p>
-</footer>
     </main>
-    <script src="scripts.js"></script>
 </body>
 </html>
