--- a/studies.html
+++ b/studies.html
@@ -55,7 +55,8 @@
        } 
 
        nav ul li { 
-            margin-right: 100px; 
+            margin-right: 10px; 
+            text-align: right;
             margin-top: -10px;
             margin-left: 15px;
        } 
