--- a/event.html
+++ b/event.html
@@ -244,6 +244,18 @@
             background-color: rgba(255, 255, 255, 0.2); /* Efek hover */
             transition: background-color 0.3s;
         }
+
+        footer { 
+            text-align: center;
+            margin: auto;
+            background-color: rgba(51, 51, 51, 0.7); /* Warna latar belakang box dengan transparansi */
+            padding: 20px; /* Padding di sekitar konten footer */
+            border-radius: 10px; /* Membuat sudut lebih melengkung */
+        }
+
+        footer p {
+            margin: 0;
+        }
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
