--- a/index.html
+++ b/index.html
@@ -70,10 +70,19 @@
     </div>
 
             
-    <footer class="text-center bg-dark text-white py-3">
-    <p>UMN.Robotic.Club<br>Club Association Of UMN Robotic<br></p>
-    <p>&copy; 2024 | This site has copyright.</p>
-</footer>
+       <footer>
+        <p>UMN.Robotic.Club<br>Club Association Of UMN Robotic<br></p>
+        <p>&copy; 2024 | This site has copyright.</p>
+        <div class="social-icons">
+                <a href="https://www.instagram.com/umnroboticclub?igsh=aWI3MmU1NXh3MDE=" target="_blank">
+                    <img src="image/insta_icon.png" alt="Instagram">
+                </a>
+                <a href="https://line.me/R/ti/g/9sE5tNjj3m" target="_blank">
+                    <img src="image/line_icon.png" alt="LINE">
+                </a>
+        </div>
+    </footer>
     <script src="scripts.js"></script>
 </body>
+            
 </html>
