--- a/index.html
+++ b/index.html
@@ -41,24 +41,9 @@
             <div class="rectangle dark-grey">
                     <p>About UMN Robotic Club</p>
                 </a>
-                <div class="popup-overlay">
-    <div class="popup-box">
-        <span class="close-btn">&times;</span>
-        <div class="popup-content">
-            <h2>About Ultrasonic Sensor</h2>
-            <p>
-                An ultrasonic sensor is a device that measures distance by emitting ultrasonic sound waves and detecting the time it takes for the sound waves to reflect back from an object. 
-                It is widely used in robotics, automation, and obstacle detection systems. 
-                Ultrasonic sensors can measure distances up to several meters with high accuracy. 
-                They are particularly useful in environments where other distance sensors, such as infrared, may struggle due to lighting conditions. 
-                Applications include robotics navigation, vehicle parking systems, and industrial automation processes. 
-                Additionally, ultrasonic sensors are known for their reliability and ability to work in dusty or dark environments without interference.
-            </p>
-        </div>
-                <div class="popup-image">
-            <img src="image/robot.png" alt="Robot Image">
+        <div class="light-grey">
+                    <span class="hover-text"> </span>
                 </div>
-            </div>
             <div class="rectangle dark-grey">
                     <p>Join UMN Robotic Club!</p>
                 </a>
@@ -66,7 +51,6 @@
                     <span class="hover-text">Entry unavailable this semester.</span>
                 </div>
             </div>
-        </div>
     </div>
 
             
