--- a/studies.html
+++ b/studies.html
@@ -182,7 +182,7 @@
 
         footer { 
             text-align: center;
-            margin: auto;
+            margin-top: auto;
             background-color: rgba(51, 51, 51, 0.7); /* Warna latar belakang box dengan transparansi */
             padding: 20px; /* Padding di sekitar konten footer */
             border-radius: 10px; /* Membuat sudut lebih melengkung */
