--- a/studies.html
+++ b/studies.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Studies - UMN Robotic Club</title>
     <style>
+        html {
+            height: 100%;
+        }
+        
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -12,6 +16,9 @@
             background-size: cover;
             background-image: url("image/studies_bg.png");
             color: aqua;
+            min-height: 100%; 
+            display:flex; 
+            flex-direction: column;
         }
         header {
             display: flex;
