--- a/studies.html
+++ b/studies.html
@@ -89,16 +89,15 @@
 
         .content {
             display: flex;
-            flex-wrap: wrap;
             justify-content: center;
             align-items: center;
             gap: 20px; /* Menambahkan jarak antar kotak */
             padding: 20px;
+            height: calc(100vh - 60px); /* Adjust according to header height */
         }
 
         .square {
             position: relative;
-            overflow: hidden;
             cursor: pointer;
             border-radius: 10px;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -142,7 +141,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             width: 90%;
-            max-width: 1000px;
+            max-width: 500px;
             background: rgba(0, 0, 0, 0.9);
             color: aqua;
             border-radius: 10px;
@@ -157,7 +156,7 @@
         }
 
         .popup-content p {
-            font-size: 15px;
+            font-size: 16px;
             line-height: 1.5;
             text-align: justify;
         }
@@ -167,7 +166,7 @@
             top: 10px;
             right: 10px;
             color: aqua;
-            font-size: 20px;
+            font-size: 24px;
             cursor: pointer;
         }
 
