--- a/studies.html
+++ b/studies.html
@@ -89,9 +89,11 @@
 
         .content {
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
             align-items: center;
-            height: calc(100vh - 60px); /* Adjust according to header height */
+            gap: 20px;
+            padding: 20px;
         }
 
         .square {
