--- a/studies.html
+++ b/studies.html
@@ -157,7 +157,7 @@
 
         .popup-content p {
             font-size: 16px;
-            line-height: 1.5;
+            line-height: 1;
             text-align: justify;
         }
 
@@ -175,7 +175,7 @@
             position: fixed;
             top: 0;
             left: 0;
-            width: 100%;
+            width: 1000px;
             height: 100%;
             background: rgba(0, 0, 0, 0.5);
             z-index: 999;
@@ -189,9 +189,9 @@
         footer { 
             text-align: center;
             margin-top: auto;
-            background-color: rgba(51, 51, 51, 0.7); /* Warna latar belakang box dengan transparansi */
-            padding: 20px; /* Padding di sekitar konten footer */
-            border-radius: 10px; /* Membuat sudut lebih melengkung */
+            background-color: rgba(51, 51, 51, 0.7); 
+            padding: 20px; 
+            border-radius: 10px; 
         }
 
         footer p {
