--- a/studies.html
+++ b/studies.html
@@ -161,21 +161,12 @@
             text-align: justify;
         }
 
-        .popup .close {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            color: aqua;
-            font-size: 24px;
-            cursor: pointer;
-        }
-
         .overlay {
             display: none;
             position: fixed;
             top: 0;
             left: 0;
-            width: 1000px;
+            width: 100%;
             height: 100%;
             background: rgba(0, 0, 0, 0.5);
             z-index: 999;
