--- a/studies.html
+++ b/studies.html
@@ -150,6 +150,15 @@
             padding: 20px;
         }
 
+        .popup .close {
+            position: relative;
+            top: 10px;
+            right: 10px;
+            color: aqua;
+            font-size: 24px;
+            cursor: pointer;
+        }
+
         .popup-content {
             position: relative;
             background-color: #4444449e;
