--- a/studies.html
+++ b/studies.html
@@ -151,7 +151,7 @@
         }
 
         .popup .close {
-            position: relative;
+            position: absolute;
             top: 10px;
             right: 10px;
             color: aqua;
