--- a/studies.html
+++ b/studies.html
@@ -246,6 +246,14 @@
         </div>
     </div>
 
+    <div class="overlay" id="overlay" onclick="closePopup()"></div>
+    <div id="popup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closePopup()">&times;</span>
+            <p id="popup-text">Popup content goes here</p>
+        </div>
+    </div>
+    
     <script>
         function showPopup(element) {
             const popup = document.getElementById('popup');
