--- a/studies.html
+++ b/studies.html
@@ -96,6 +96,23 @@
             padding: 20px;
         }
 
+        .popup-content {
+            position: relative;
+            background-color: #4444449e;
+            padding: 40px; 
+            border-radius: 10px; 
+        }
+
+        .popup .close {
+            position: absolute;
+            top: 15px; 
+            right: 15px;
+            color: aqua;
+            font-size: 24px;
+            cursor: pointer;
+        }
+
+
         .square {
             position: relative;
             cursor: pointer;
@@ -148,20 +165,6 @@
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.8);
             z-index: 1000;
             padding: 20px;
-        }
-
-        .popup .close {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            color: aqua;
-            font-size: 24px;
-            cursor: pointer;
-        }
-
-        .popup-content {
-            position: relative;
-            background-color: #4444449e;
         }
 
         .popup-content p {
