--- a/studies.html
+++ b/studies.html
@@ -86,8 +86,8 @@
 
         .wrapper {
             display: grid;
-            grid-template-columns: repeat(3, 1fr); /* 3 items per row */
-            gap: 20px;
+            grid-template-columns: repeat(3, 1fr); 
+            gap: 10px;
             padding: 20px;
             justify-items: center;
             align-items: center;
@@ -121,7 +121,7 @@
             background: rgba(0, 0, 0, 0.7);
             color: aqua;
             padding: 10px;
-            font-size: 14px;
+            font-size: 12px;
             text-align: center;
             transform: translateY(100%);
             transition: transform 0.3s ease;
