--- a/schedule.html
+++ b/schedule.html
@@ -9,11 +9,35 @@
             background-size: cover;
             background-image: url("image/schedule_bg.png");
         }
+
+        .left-square {
+            width: 250px;
+            height: 250px;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            text-align: center;
+            border-radius: 8px;
+            margin: 20px;
+        }
+
+        .flatpickr-calendar {
+            width: 100%;
+        }
+
+        .right-square {
+            margin-top: 20px;
+            padding: 15px;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            border-radius: 8px;
+        }
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schedule</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Include Flatpickr Library -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 <body>
     <header>
@@ -38,24 +62,57 @@
     </header>
     <main>
         <div class="content">
-            <div class="left-circle">
-                <div id="datetime"></div>
+            <!-- Calendar Container -->
+            <div class="left-square">
+                <h3>Pick a Date</h3>
+                <input id="calendar" type="text" placeholder="Select a date" readonly>
             </div>
+            <!-- Schedule Display -->
             <div class="right-square">
                 <h2>Meeting Schedule:</h2>
-                    <li>Time:</li>
-                    <li>--:-- AM</li>
-                    <li>--:-- PM</li>
-                    <li>Location:</li>
-                    <li>--</li>
+                <ul id="schedule-details">
+                    <li>Time: --:--</li>
+                    <li>Location: --</li>
                     <li>Details: No meeting in this semester</li>
+                </ul>
             </div>
         </div>
-        <footer class="text-center bg-dark text-white py-3">
-    <p>UMN.Robotic.Club<br>Club Association Of UMN Robotic<br></p>
-    <p>&copy; 2024 | This site has copyright.</p>
-</footer>
     </main>
-    <script src="scripts.js"></script>
+    <footer class="text-center bg-dark text-white py-3">
+        <p>UMN.Robotic.Club<br>Club Association Of UMN Robotic<br></p>
+        <p>&copy; 2024 | This site has copyright.</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script>
+        // Initialize Flatpickr Calendar
+        const calendar = document.getElementById('calendar');
+        const scheduleDetails = document.getElementById('schedule-details');
+
+        // Predefined Meeting Dates
+        const meetingSchedule = {
+            '2024-01-03': { time: '18:00', location: 'Room A', details: 'Robotic Club Workshop' },
+            '2024-01-10': { time: '18:00', location: 'Room A', details: 'Weekly Robotic Meeting' }
+        };
+
+        flatpickr(calendar, {
+            inline: true,
+            onChange: function(selectedDates, dateStr) {
+                if (meetingSchedule[dateStr]) {
+                    const { time, location, details } = meetingSchedule[dateStr];
+                    scheduleDetails.innerHTML = `
+                        <li>Time: ${time}</li>
+                        <li>Location: ${location}</li>
+                        <li>Details: ${details}</li>
+                    `;
+                } else {
+                    scheduleDetails.innerHTML = `
+                        <li>Time: --:--</li>
+                        <li>Location: --</li>
+                        <li>Details: No meeting in this semester</li>
+                    `;
+                }
+            }
+        });
+    </script>
 </body>
 </html>
