--- a/schedule.html
+++ b/schedule.html
@@ -20,18 +20,18 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 20px;
+            padding: 10px 20px;
             background-color: rgba(0, 0, 0, 0.8);
         }
 
         header .logo {
-            max-height: 60px;
+            max-height: 50px; /* Menyesuaikan ukuran logo */
         }
 
         nav ul {
             list-style: none;
             display: flex;
-            gap: 15px;
+            gap: 20px;
             margin: 0;
             padding: 0;
         }
@@ -104,15 +104,21 @@
         }
 
         footer {
-            text-align: center;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 20px;
             background-color: rgba(0, 0, 0, 0.8);
             color: white;
-            padding: 20px;
             font-size: 14px;
         }
 
-        footer p {
-            margin: 5px 0;
+        footer .footer-left p, footer .footer-right p {
+            margin: 0;
+        }
+
+        footer .footer-right img {
+            max-height: 30px; /* Menyesuaikan ukuran logo footer */
         }
     </style>
 </head>
@@ -146,9 +152,13 @@
         </div>
     </main>
     <footer>
-        <p>UMN.Robotic.Club</p>
-        <p>Club Association of UMN Robotic</p>
-        <p>&copy; 2024 | Hak Cipta Dilindungi</p>
+        <div class="footer-left">
+            <p>UMN.Robotic.Club</p>
+            <p>Club Association of UMN Robotic</p>
+        </div>
+        <div class="footer-right">
+            <img src="image/umn_logo.png" alt="UMN Logo Footer">
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script>
