--- a/event.html
+++ b/event.html
@@ -259,7 +259,7 @@
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esports Event</title>
+    <title>Event</title>
 </head>
 <body>
     <header>
